# ml-sentiment-analyzer

./: .gitignore  important_commands.txt  pyproject.toml
notebooks/: EDA_Model_Training.ipynb  EDA_and_Model_Training.ipynb
notebooks/.ipynb_checkpoints/: ExploratoryDataAnalysis-checkpoint.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
